cli/crates/cli/tests/snapshots/auth__type_field_resolver_mixed__private_mutation_should_succeed.snap
---
source: crates/cli/tests/auth.rs
expression: "private_client.gql::<Value>(AUTH_CREATE_MUTATION).await"
---
{
  "data": {
    "todoCreate": {
      "__typename": "TodoCreatePayload",
      "todo": {
        "title": "1"
      }
    }
  }
}
