cli/crates/cli/tests/snapshots/auth__type_field_resolver_mixed__private_query_should_succeed.snap
---
source: crates/cli/tests/auth.rs
expression: "private_client.gql::<Value>(AUTH_QUERY_WITH_TEXT).await"
---
{
  "data": {
    "todoCollection": {
      "__typename": "TodoConnection",
      "edges": [
        {
          "node": {
            "title": "1",
            "text": "Lorem ipsum dolor sit amet"
          }
        }
      ]
    }
  }
}
