cli/crates/cli/tests/snapshots/auth__type_field_resolver_mixed__public_partial_query_should_succeed.snap
---
source: crates/cli/tests/auth.rs
expression: "public_client.gql::<Value>(JWT_PROVIDER_QUERY).await"
---
{
  "data": {
    "todoCollection": {
      "__typename": "TodoConnection",
      "edges": [
        {
          "node": {
            "title": "1"
          }
        }
      ]
    }
  }
}
